--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.5",
     "react": "^17.0.1",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^17.0.1",
     "react-notify-toast": "^0.5.1",
     "react-scripts": "4.0.1",
